--- a/ecom-frontEnd/src/styles/app.scss
+++ b/ecom-frontEnd/src/styles/app.scss
@@ -8,6 +8,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+  }
+  body{
+    user-select: none;
   }
   
   a {
@@ -31,6 +35,7 @@
   
   @import "admin-styles/mixin";
   
+  @import "home.scss";
   @import "admin-styles/dashboard";
   @import "admin-styles/products";
   @import "admin-styles/chart";
